# unconference

./: .gitignore  README.md  pyproject.toml
unconference/: admin.py  apps.py  decorators.py  models.py  settings.py  urls.py  views.py
unconference/migrations/: 0001_initial.py  0002_scheduletime_max_sessions_alter_room_description_and_more.py  0002_usereventdata.py  0003_location_remove_room_unique_room_and_more.py
unconference/templates/unconference/: home.html  schedule.html
