[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "unconference/_version.py"

[project]
name = "unconference"
authors = [{name = "Tim Allen", email = "flipper@peregrinesalon.com"},]
description = "A Django app for creating daily un-conference schedules."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["django", "unconference", "barcamp", "schedule"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FlipperPA/unconference"
"Repository" = "https://github.com/FlipperPA/unconference"
"Documentation" = "https://github.com/FlipperPA/unconference"
